--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/fatimazza/CypressAPITest/issues"
   },
-  "homepage": "https://github.com/fatimazza/CypressAPITest#readme"
+  "homepage": "https://github.com/fatimazza/CypressAPITest#readme",
+  "dependencies": {
+    "cypress": "^12.7.0"
+  }
 }
