--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "url": "https://github.com/fatimazza/CypressAPITest/issues"
   },
   "homepage": "https://github.com/fatimazza/CypressAPITest#readme",
-  "dependencies": {
-    "cypress": "^12.7.0"
+  "devDependencies": {
+    "cypress": "^12.13.0"
   }
 }
